--- a/RedditOnRails/app/views/application/_login_form.html.erb
+++ b/RedditOnRails/app/views/application/_login_form.html.erb
@@ -1,4 +1,5 @@
-<form action="<%= users_url %>" method="post">
+
+<form action="<%= destination_url %>" method="post">
   <%= auth_tok %>
 
 <label for='username'>Username</label>
@@ -11,5 +12,5 @@
 
 <br/><br/>
 
-<input type='submit' value='Join RedditOnRails'>
+<input type='submit' value="<%= button_text %>">
 </form>
