--- a/RedditOnRails/app/views/users/new.html.erb
+++ b/RedditOnRails/app/views/users/new.html.erb
@@ -1,6 +1,9 @@
 <h1> Sign Up!</h1>
 
-<%= render partial: 'login_form' %>
+<%= render partial: 'login_form', locals: {
+                                    destination_url: session_url,
+                                    button_text: 'Join Reddit on Rails' } %>
+
 <!-- <form action="<%= users_url %>" method="post">
   <%= auth_tok %>
 
